--- a/app/src/main/res/values-hi/strings.xml
+++ b/app/src/main/res/values-hi/strings.xml
@@ -478,7 +478,7 @@
     <string name="choose_sleeping_option">कृपया सोने की सुविधा विकल्प चुनें</string>
     <string name="open_24_x_7">24 x 7 खोलें</string>
     <string name="deleting_image">छवि हटाना</string>
-    <string name="force_update_message">ऐप का यह संस्करण अब समर्थित नहीं है, कृपया उपयोग करने के लिए अद्यतन करें</string>
+    <string name="force_update_message">ऐप का यह संस्करण अब समर्थित नहीं है, कृपया एप्लिकेशन का उपयोग जारी रखने के लिए नवीनतम संस्करण में अपडेट करें।</string>
     <string name="name_">नाम *</string>
     <string name="confirm_save_dhaba_details">क्या आप ढाबा विवरण सहेजना चाहते हैं?</string>
     <string name="sent_for_spproval">अनुमोदन के लिए सफलतापूर्वक भेजा गया</string>
