--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -553,7 +553,7 @@
     <string name="choose_sleeping_option">Please choose sleeping option</string>
     <string name="open_24_x_7">Open 24 x 7</string>
     <string name="deleting_image">Deleting Image</string>
-    <string name="force_update_message">This version of app is not longer supported, Please update to keep using </string>
+    <string name="force_update_message">This version of app is no longer supported, Please update to the latest version to keep using application.</string>
     <string name="name_">Name *</string>
     <string name="confirm_save_dhaba_details">Do you want to save dhaba details?</string>
     <string name="sent_for_spproval">Sent for approval successfully</string>
