UI and UX changes as per scenarios

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -604,5 +604,7 @@
     <string name="are_you_sure_to_exit">Are you sure you want exit now?</string>
     <string name="no_dhaba_for_filters">No Dhaba found for the applied filters</string>
     <string name="filters_validation">Please select some filters to apply.</string>
+    <string name="open_">Open</string>
+    <string name="to">to</string>
 
 </resources>
