--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -606,5 +606,7 @@
     <string name="filters_validation">Please select some filters to apply.</string>
     <string name="open_">Open</string>
     <string name="to">to</string>
+    <string name="unable_to_get_current_location">Unable to get current location.</string>
+    <string name="location_permission_confirmation">Please allow location permission to access current location.</string>
 
 </resources>
