--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -609,5 +609,6 @@
     <string name="unable_to_get_current_location">Unable to get current location.</string>
     <string name="location_permission_confirmation">Please allow location permission to access current location.</string>
     <string name="update_and_next">Update &amp; Next</string>
+    <string name="saving_details">Saving Details</string>
 
 </resources>
