Timing Section in executive login

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -611,5 +611,6 @@
     <string name="update_and_next">Update &amp; Next</string>
     <string name="saving_details">Saving Details</string>
     <string name="saving_as_draft">Saving as draft</string>
+    <string name="dhaba_timings">Dhaba Timings</string>
 
 </resources>
