--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -490,6 +490,14 @@
         <item>@drawable/ic_settings_hilighted</item>
     </integer-array>
 
+    <string-array name="options_report_review_reason">
+        <item>Abusive</item>
+        <item>Offensive</item>
+        <item>Nudity</item>
+        <item>Inappropriate</item>
+        <item>Need Moderator Intervention</item>
+    </string-array>
+
     <string name="no_customers">No Customers</string>
     <string name="search_customer">Search Customer</string>
     <string name="add_customer">Add Customer</string>
@@ -622,5 +630,11 @@
     <string name="view_all_reviews">Load More Reviews</string>
     <string name="add_reply">Add Reply</string>
     <string name="your_reply">Your Reply</string>
+    <string name="report_comment">Report Comment</string>
+    <string name="description">Description</string>
+    <string name="reason">Reason</string>
+    <string name="select_reason">Select Reason</string>
+    <string name="report_submitted">Report submitted successfully.</string>
+    <string name="report">Report</string>
 
 </resources>
