Rating and review - in progress

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -634,6 +634,7 @@
     <string name="description">Description</string>
     <string name="reason">Reason</string>
     <string name="select_reason">Select Reason</string>
+    <string name="please_select_reason">Please select Reason</string>
     <string name="report_submitted">Report submitted successfully.</string>
     <string name="report">Report</string>
 
