--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -642,5 +642,10 @@
     <string name="enter_description">Please enter a description.</string>
     <string name="review_report_reasons">Review Report Reasons</string>
     <string name="reply">Reply</string>
+    <string name="notification">Notification</string>
+    <string name="call">Call</string>
+    <string name="retry">Retry</string>
+    <string name="no_chat_data">No Chat Data</string>
+    <string name="type_a_message">Type a message</string>
 
 </resources>
